tests/ui/parser/incompatible-safe-unsafe-keywords-extern-block-1.stderr
error: expected one of `extern` or `fn`, found keyword `unsafe`
  --> $DIR/incompatible-safe-unsafe-keywords-extern-block-1.rs:28:6
   |
LL | safe unsafe extern {}
   |      ^^^^^^ expected one of `extern` or `fn`
   |
help: `safe` and `unsafe` are incompatible, use only one of the keywords
  --> $DIR/incompatible-safe-unsafe-keywords-extern-block-1.rs:28:1
   |
LL | safe unsafe extern {}
   | ^^^^^^^^^^^

error: aborting due to 1 previous error

